# channel

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  channel.h  frame_timer.c  frame_timer.h  frame_timer_hw.c  frame_timer_hw.h  main.c  packet.c  packet.h  packetizer.h  packetizer_timeout.c  packetizer_timeout.h  timer1.c  timer1.h
app/: Main.c
bsp/CH579/: startup_ARMCM0.s
bsp/CH579/StdPeriphDriver/: CH57x_uart0.c  CH57x_uart1.c
bsp/CH579/StdPeriphDriver/inc/: CH579SFR.h
build_test_hvac/: CMakeCache.txt
docs/: hvac-architecture.drawio  hvac-sequence.drawio
hvac/: ac.c  ac.h  ac_gree.c  ac_gree_b.c  ac_mock.c  ac_task_body.txt  bus.c  bus.h  example_main.c  fake_freertos.h  mock_phy.c  scan.c  scan.h  test_pc.c
lib/FreeRTOS/: FreeRTOSConfig.h  freertos_port.c
lib/FreeRTOS/Source/: queue.c  tasks.c
sim/: sim_app.c  sim_gui.c
src/: ac.c  ac.h  brand_manager.c  bus.c  bus.h  debug_trace.h  frame_timer.h  frame_timer_hw.c  frame_timer_hw.h  frame_timer_sw.c  frame_timer_sw.h  hvac_init.h  packet.c  packet.h  packetizer_timeout.c  packetizer_timeout.h  phy.h  phy_uart1.c  phy_uart1.h
src/app/: brand_manager.h  hvac_init.c
src/brands/: ac_gree_example.c
src/framework/: ac.c  ac.h  brand_manager.c  brand_manager.h  gateway.h  gateway_device.c  gateway_device.h  hvac_init.c
src/hal/: log.h  timer1.c
src/hal/packetizer/: packetizer_timeout.c
src/hal/timer/: timer1.h
src/utils/: log.c
test/: log_demo.c  test_stress_script.c
